tests/paczka1/small_fuzzy/64140709.err
Error in line 4: Pu7QoVnCX A669 65,8
Error in line 8: Ojt1ns A500 4,3
Error in line 9: wls S404 36,7
